# DDrum

./: .gitignore  CMakeLists.txt  DDrum.qmlproject  DDrum.qmlproject.qtds  DDrum.qrc  Drumpad.qmlproject  Drumpad.qrc  Drumpad.qtds  qds.cmake
App/: CMakeLists.txt  main.cpp
App/audio/: CMakeLists.txt  audioengine.cpp  audioengine.h  audiofilesmodel.cpp  waveformitem.cpp  waveformitem.h
App/autogen/: environment.h
App/components/: CMakeLists.txt  audiofilesmodel.cpp  audiofilesmodel.h
DDrum/: AvailableSoundsComboBox.qml  AvailableSoundsComboBoxDelegate.qml  Bla.qml  CMakeLists.txt  CenteredFlow.qml  Constants.qml  DirectoryFontLoader.qml  SoundEffectPlayer.qml  StyledSpinBox.qml  VolumeSlider.qml  qmldir
DDrum/designer/: plugin.metainfo
DDrumContent/: App.qml  CMakeLists.txt  MainScreen.qml  MainScreen.ui.qml  Screen01.ui.qml  qmldir
Drumpad/: CMakeLists.txt  SoundEffectPlayer.qml  VolumeSlider.qml  qmldir
Drumpad/designer/: plugin.metainfo
DrumpadContent/: App.qml  CMakeLists.txt  MainScreen.qml  qmldir
Mocks/: CMakeLists.txt
Mocks/Audio/: AudioEngine.qml  CMakeLists.txt  WaveformItem.qml
Mocks/Components/: AudioFilesModel.qml
Python/: .pyproject  DDrum.pyproject  audioengine.py  main.py  waveformitem.py
Python/audio/: __init__.py  audio_files_model.py  audioengine.py  waveformitem.py
Python/autogen/: settings.py
Python/components/: audio_files_model.py
